--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "engines": {
     "node": ">=0.10"
   },
-  "dependencies": {},
+  "dependencies": {
+    "hoek": "~2.1.0"
+  },
   "devDependencies": {
     "chai": "~1.9.1",
-    "mocha": "~1.18.2"
+    "mocha": "~1.18.2",
+    "hapi": "~4.1.0"
   },
   "scripts": {
     "test": "mocha test/*.mocha.js"
