Support for Hapi 8.6
Also update Mocha, Chai to latest versions.

--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   ],
   "main": "lib/hapi-elapsed",
   "engines": {
-    "node": ">=0.10"
+    "node": ">=0.12"
   },
   "dependencies": {
-    "hoek": "~2.1.0"
+    "hoek": "^2.14.0"
   },
   "devDependencies": {
-    "chai": "~1.9.1",
-    "mocha": "~1.18.2",
-    "hapi": "~4.1.0"
+    "chai": "^3.0.0",
+    "hapi": "^8.6.0",
+    "mocha": "^2.2.5"
   },
   "scripts": {
     "test": "mocha test/*.mocha.js"
